# Go-For-It

./: .bzrignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  com.github.jmoerman.go-for-it.yml
.github/workflows/: main.yml
cmake/: Translations.cmake  ValaPrecompile.cmake
data/: go-for-it.appdata.xml.in.in  go-for-it.desktop.in.in  go-for-it.gschema.xml.in  resources.gresource.xml.in
data/style/: dark.css  light.css  safe-colors.css
debian/: changelog  control  files  rules
executable/: go-for-it.vala
plugins/: CMakeLists.txt
plugins/classic/: CMakeLists.txt  classic.plugin
plugins/classic/src/: Classic.vala  SettingsManager.vala  Task.vala  TaskManager.vala  TaskStore.vala
plugins/classic/src/view/: SettingsWidget.vala  TaskList.vala
plugins/launcher_indicator/: CMakeLists.txt
plugins/launcher_indicator/libunity/: dbusmenu-glib-0.4.vapi  unity-launcher.vala
plugins/todo_txt/: CMakeLists.txt  todo_txt.plugin
plugins/todo_txt/src/: Filter.vala  Parser.vala  Plugin.vala  SettingsManager.vala  TXTTask.vala  TaskManager.vala  TaskStore.vala  Writer.vala
plugins/todo_txt/src/view/: BottomBar.vala  DoneView.vala  TaskRow.vala  TodoView.vala
po/: ar.po  bg.po  cs.po  et.po  fr.po  fr_CA.po  hr.po  ia.po  id.po  ka.po  lv.po  nl.po  pt.po  ru.po  sk.po  ta.po  tr.po  uk.po  zh.po  zh_TW.po
po/extra/: ar.po  cs.po  en_CA.po  en_GB.po  es.po  et.po  ia.po  id.po  nl.po  pt.po  ru.po  ta.po  zh_TW.po
src/: CMakeLists.txt  Constants.vala.cmake  Date.vala  DragSource.vala  Main.vala  MainWindow.vala  PluginManager.vala  SequentialList.vala  SettingsManager.vala  TaskList.vala  TaskManager.vala  TaskTimer.vala  Theme.vala  TimerSchedule.vala  TodoTask.vala  Utils.vala  go-for-it.pc.cmake
src/Dialogs/: DialogUtils.vala  RecurrenceDialog.vala  SimpleRecurrenceDialog.vala
src/Dialogs/SettingsPages/: NotificationsPage.vala
src/Pages/: SelectionPage.vala  TaskListPage.vala
src/Recurrence/: RecurrenceFrequency.vala  RecurrenceIterator.vala  RecurrenceMode.vala  RecurrenceRule.vala  SimpleRecurrence.vala  SimpleRecurrenceIterator.vala
src/Services/: FileWatcher.vala  ListManager.vala  SettingsManager.vala  TaskTimer.vala
src/Todo.txt/: ListSettings.vala  TaskManager.vala  TaskStore.vala  TxtList.vala  TxtListManager.vala  TxtTask.vala  TxtUtils.vala
src/Todo.txt/Widgets/: TaskListWidget.vala  TaskMarkupLabel.vala  TaskRow.vala  TextMeasurements.vala  TxtPage.vala
src/Widgets/: BaselineCenterBin.vala  BaselineStack.vala  ConstrWidthBin.vala  DragList.vala  DragListModel.vala  DragListRowBox.vala  ExplanationWidget.vala  FileChooserWidget.vala  TimerBar.vala  TimerScheduleWidget.vala  TimerView.vala  TodoListInfoRow.vala
src/api/: Interface.vala  PluginSettings.vala  TodoPlugin.vala
src/application/: CMakeLists.txt  Main.vala
src/application/view/: AboutDialog.vala  ContributeDialog.vala  MainLayout.vala  MainWindow.vala  PluginSelector.vala  SettingsDialog.vala  TimerView.vala
src/todo/: TaskTimer.vala
src/view/: AboutDialog.vala  ContributeDialog.vala  MainLayout.vala  MainWindow.vala  PluginSelector.vala  SettingsDialog.vala  TaskView.vala  TimerView.vala
style/3.10/: go-for-it.css
style/3.20/: go-for-it.css
tests/: CMakeLists.txt  DragListTest.vala  Tests.vala  assertionhelpers.vala
tests/todo.txt/: TaskManagerTest.vala  TaskStoreTest.vala  TodoTaskTest.vala
vapi/: glib_assert.vapi
